<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item android:title="Sensors">
            <menu>
                <item
                    android:id="@+id/nav_temperature"
                    android:icon="@drawable/ic_brightness_7_black_24dp"
                    android:title="@string/menu_temperature" />
                <item
                    android:id="@+id/nav_humidity"
                    android:icon="@drawable/ic_invert_colors_black_24dp"
                    android:title="@string/menu_humidity" />
                <item
                    android:id="@+id/nav_co2"
                    android:icon="@drawable/ic_local_florist_black_24dp"
                    android:title="@string/menu_co2" />
                <item
                    android:id="@+id/nav_noise"
                    android:icon="@drawable/ic_music_note_black_24dp"
                    android:title="@string/menu_noise" />

            </menu>
        </item>

    </group>

    <item android:title="User">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_profile" />

        </menu>
    </item>

</menu>
