<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="sep4x2.android.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_register"
            app:destination="@id/nav_register" />
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_register"
        android:name="sep4x2.android.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_nav_register_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_register_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="sep4x2.android.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_change_password"
        android:name="sep4x2.android.ui.change_password.ChangePasswordFragment"
        android:label="@string/profile_change_password"
        tools:layout="@layout/fragment_change_password" >
        <action
            android:id="@+id/action_nav_change_password_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_co2"
        android:name="sep4x2.android.ui.co2.Co2Fragment"
        android:label="@string/menu_co2"
        tools:layout="@layout/fragment_co2" />

    <fragment
        android:id="@+id/nav_temperature"
        android:name="sep4x2.android.ui.temperature.TemperatureFragment"
        android:label="@string/menu_temperature"
        tools:layout="@layout/fragment_temperature" />

    <fragment
        android:id="@+id/nav_humidity"
        android:name="sep4x2.android.ui.humidity.HumidityFragment"
        android:label="@string/menu_humidity"
        tools:layout="@layout/fragment_humidity" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="sep4x2.android.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_change_password"
            app:destination="@+id/nav_change_password" />
    </fragment>

    <fragment
        android:id="@+id/nav_noise"
        android:name="sep4x2.android.ui.noise.NoiseFragment"
        android:label="@string/menu_noise"
        tools:layout="@layout/fragment_noise" />
</navigation>