<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="32dp"
    android:layout_marginStart="32dp"
    android:layout_marginBottom="32dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:hint="@string/login_email"
                    android:layout_gravity="center_horizontal"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"/>

                <Button
                    android:id="@+id/login_loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_loginButton"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center_horizontal" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center"
                    android:background="@android:color/darker_gray" />



                <Button

                    android:id="@+id/login_registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_registerButton"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

        </FrameLayout>
    </ScrollView>
















</LinearLayout>